--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "Nunito", sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
 }
 
 body {
@@ -56,10 +56,42 @@ header a {
     font-size: 1rem;
 }
 
+header h1 {
+    display: none;
+}
+
 main {
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
+}
+
+.posts {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
+.post {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.post-content {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
+.post-content p {
+    text-align: justify;
+    line-height: 1.5rem;
+}
+
+.post-content img {
+    width: 20rem;
+    align-self: center;
 }
 
 .book {
